apps/meilisearch/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: default
  labels:
    helm.sh/chart: onechart-0.60.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
  annotations:
    gimlet.io/git-repository: margarinas/gitops-velocita-prod-apps
    v1alpha1.opensca.dev/vcs.owner: margarinas
    v1alpha1.opensca.dev/vcs.name: gitops-staging-apps
    gimlet.io/git-sha: 9e4e7dec0607737fffee022afe6c2a2e82c94645
    v1alpha1.opensca.dev/version.sha: 9e4e7dec0607737fffee022afe6c2a2e82c94645
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: meilisearch
