apps/meilisearch/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch
  namespace: default
  labels:
    helm.sh/chart: onechart-0.60.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
  annotations:
    gimlet.io/git-sha: 9e4e7dec0607737fffee022afe6c2a2e82c94645
    gimlet.io/git-repository: margarinas/gitops-velocita-prod-apps
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: meilisearch
                port:
                  number: 7700
